# cw250624

./: .gitignore  README.md  main.py  pyproject.toml
data/: vacancies.json
src/: api.py  jsonsaver.py  models.py  saver.py
tests/: test_jsonsaver.py
