[build-system]
requires = ["setuptools", "wheel"]

[tool.poetry]
name = "job_scraper"
version = "0.1.0"
description = "A project to scrape job listings from hh.ru and manage them."
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
unittest = "^1.0.0"
